# refactored-barnacle

./: README.md
steamdeck-one-thumb-radial-keyboard/: CMakeLists.txt  README.md
steamdeck-one-thumb-radial-keyboard/dev/: apply.sh
steamdeck-one-thumb-radial-keyboard/docs/: ARCHITECTURE.md  CHANGELOG_phase2a_inputrouter_fsm_activation.md  CLAUDE_PLAYGROUND_PROMPT.md  CLAUDE_RULES.md  PR_DESCRIPTION.md  architecture.md  input-model.md  state-machine.md  swipe-decoding-and-haptics.md
steamdeck-one-thumb-radial-keyboard/packaging/scripts/: install-user.sh  run-dev.sh
steamdeck-one-thumb-radial-keyboard/packaging/systemd/: radialkb-engine.service  radialkb-ui.service
steamdeck-one-thumb-radial-keyboard/src/engine/: CommitBridge.cpp  CommitBridge.h  EngineMain.cpp  GestureRecognizer.cpp  GestureRecognizer.h  Haptics.cpp  Haptics.h  InputRouter.cpp  InputRouter.h  Logging.cpp  Logging.h  RadialLayout.cpp  RadialLayout.h  StateMachine.cpp  StateMachine.h  TouchInputLibinput.cpp  TouchInputLibinput.h  UInputKeyboard.cpp  UInputKeyboard.h
steamdeck-one-thumb-radial-keyboard/src/engine/swipe/: SwipePath.cpp  SwipePath.h
steamdeck-one-thumb-radial-keyboard/src/ui/: main.cpp  radialkbctl.cpp
steamdeck-one-thumb-radial-keyboard/src/ui/qml/: CandidateBar.qml  DebugOverlay.qml  MainOverlay.qml  RadialKeyboard.qml  TouchKeyboard.qml
steamdeck-one-thumb-radial-keyboard/tests/: engine_tests.cpp
